# napkin

./: .env.example  .env.production.template  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  railway.json
.next/cache/: .previewinfo  .rscinfo
app/: __init__.py  main.py  workers.py
app/agents/: memory.py  prioritizer.py  repo_context.py  spec_qa.py  stubs.py  task_planner.py
app/agents/prompts/: prioritizer.py  repo_context.py  spec_qa.py  task_planner.py
app/api/routes/: actions.py  auth.py  briefs.py  chat.py  health.py  integrations.py  projects.py  sessions.py  specs.py
app/core/: config.py  llm.py
app/db/: client.py
app/models/: agent_state.py  entities.py  llm_outputs.py  memory_models.py  prioritizer_models.py  session_state.py  task_models.py
app/schemas/: api.py
app/services/: file_parser.py  session_lifecycle.py  session_service.py
app/services/actions/: generator.py
app/services/agents/: context_inferrer.py  gates.py  intake.py  memory.py  orchestrator.py  prioritizer.py  prompts.py  react.py  repo_context.py  socratic.py  spec_builder.py  spec_qa.py  synthesis.py  task_planner.py
app/services/analytics/: __init__.py  visualizer.py
app/services/briefs/: weekly_brief.py
app/services/chat/: engine.py
app/services/export/: export_service.py  prd_exporter.py  tickets_exporter.py
app/services/github/: connector.py
frontend/: API_REFERENCE.md  middleware.ts  package-lock.json  package.json
frontend/src/: BACKEND_INTEGRATION.md
migrations/: 001_initial_schema.sql  002_add_agent_columns.sql  002_embedding_384.sql  003_addons_schema.sql  004_session_trigger.sql  005_session_lifecycle.sql  006_socratic_mode.sql  007_github_tracking.sql  RUN_THIS_NOW.sql
tests/: conftest.py  test_export.py  test_intake.py  test_memory.py  test_orchestrator.py  test_prioritizer.py  test_repo_context.py  test_sessions_api.py  test_socratic.py  test_spec_builder.py  test_spec_qa.py  test_synthesis.py  test_task_planner.py
(+183 files in other folders)
