[project]
name = "napkin-backend"
version = "0.1.0"
description = "Napkin — The intelligence layer between customer reality and code. Cursor for Product Management."
requires-python = ">=3.11"
dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # --- Database (Supabase) ---
    "supabase>=2.9.0",
    "postgrest>=0.16.0",

    # --- Agent Architecture ---
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",

    # --- Data Validation ---
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # --- Embeddings & Vector ---
    "numpy>=1.26.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",

    # --- Data Processing ---
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",

    # --- File Processing ---
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "reportlab>=4.0.0",

    # --- Async & Background ---
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "apscheduler>=3.10.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",

    # --- Auth & Security ---
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",

    # --- Observability ---
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.14.0",

    # --- Utilities ---
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
